# huffman-codec

./: CMakeLists.txt
src/: BitOperators.cpp  BitOperators.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Exceptions.h  HuffmanCode.h  HuffmanTree.cpp  HuffmanTree.h  PriorityQueue.h  Queue.h  main.cpp
test/: test.cpp  tests.cpp
test/corrupted/: bad-all-zero-frequencies.txt.huf  bad-big.txt.huf  bad-count-too-large.txt.huf  bad-count-zero.txt.huf  bad-header-size.txt.huf  bad-lastbits-nine.txt.huf  bad-lastbits-zero.txt.huf  bad-utf8-demo.txt.huf  bad-zero-frequency.txt.huf  foreign-header.txt.huf  truncated-half-file.txt.huf  truncated-missing-header-size.txt.huf  truncated-missing-one-byte.txt.huf
test/input/: The Jewish Torah.txt  Torah in Hebrew_djvu.txt  english-lorem.txt  fr-iso88591.txt  genji-japanese-jis.txt  genji-japanese.txt  illiada-greek.txt  lotr-en.txt  quran-arabic.txt  russian-lorem.txt  some-text.txt  war-and-peace-ru.txt  zh-gbk.txt  文源 (林义光) 2012_djvu.txt
